=======
CHANGES
=======

1.4.1 (unreleased)
------------------

None yet.


1.4.0 (2010-05-21)
------------------

This is a final release for Lucid.

- Fix Timetable Schemas page for non-manager users (https://launchpad.net/bugs/545780)
- Fix timetable display when first day of the week is empty (https://launchpad.net/bugs/545763)
- Fix timetable plugin for sampledata (https://launchpad.net/bugs/306107)
- Translate "Confirm" button in delete forms correctly.
- Update translations

More info at https://launchpad.net/schooltool/+release/1.4.0


1.3.2 (2010-04-29)
------------------

- Added course names to section links in the person view, sorting Sections and
  Groups links by school year (https://launchpad.net/bugs/545793)
- Made edit links on person, section and group views available only to managers (https://launchpad.net/bugs/361436)
- Display resources of calendar events on weekly view (https://launchpad.net/bugs/540099)
- Changed old Zonki in pdf footers (https://launchpad.net/bugs/561558)
- Use semicolon to separate instructors in section's label (https://launchpad.net/bugs/558911)
- Prevent the user to enter non-ascii usernames (https://launchpad.net/bugs/397610)
- Update translations

More info at https://launchpad.net/schooltool/+release/1.3.2


1.3.1 (2010-04-07)
------------------

- Reduce dependency on ``zope.app.*`` packages
- Allow advisors to view person info (https://launchpad.net/bugs/513064)
- Flag to disable mail server (https://launchpad.net/bugs/513026)
- Added action to send emails to student contacts (https://launchpad.net/bugs/496255)
- Formatted email form notifications (https://launchpad.net/bugs/497492)
- Fixed broken FCK Editor in some views (https://launchpad.net/bugs/556478)
- Added a "neutral" submit button style (https://launchpad.net/bugs/424510)
- Added security descriptions tutorial
- Update translations

More info at https://launchpad.net/schooltool/+release/1.3.1


1.3.0 (2010-01-06)
------------------
