@@ -47,3 +47,31 @@ This file has examples of bad data for the Terms sheet:
     <p class="error">Terms B16 has no date in it</p>
     <p class="error">Terms E17 end date cannot be before start date</p>
 
+This file has examples of bad data for the School Timetables sheet:
+
+    >>> browser.getLink('Manage').click()
+    >>> browser.getLink('XLS Import').click()
+    >>> import pkg_resources
+    >>> browser.getControl('XLS File').add_file(
+    ...     pkg_resources.resource_stream('schooltool.export.ftests', 'errant_timetables.xls'),
+    ...     'application/excel',
+    ...     'sample_data.xls')
+    >>> browser.getControl('Submit').click()
+    >>> browser.printQuery("//p[@class='error']")
+    <p class="error">School Timetables B1 missing required text</p>
+    <p class="error">School Timetables B2 missing required text</p>
+    <p class="error">School Timetables B3 missing required text</p>
+    <p class="error">School Timetables B4 missing required text</p>
+    <p class="error">School Timetables B6 not unicode or ascii string</p>
+    <p class="error">School Timetables B7 not unicode or ascii string</p>
+    <p class="error">School Timetables B8 not unicode or ascii string</p>
+    <p class="error">School Timetables B9 not unicode or ascii string</p>
+    <p class="error">School Timetables B12 invalid school year</p>
+    <p class="error">School Timetables B13 is not a valid timetable model</p>
+    <p class="error">Schema has no day templates in A21</p>
+    <p class="error">School Timetables A27 not unicode or ascii string</p>
+    <p class="error">School Timetables B27 is not a valid time range</p>
+    <p class="error">School Timetables A29 is the same day id as another in this timetable</p>
+    <p class="error">School Timetables A40 is not defined in the 'Day Templates' section</p>
+    <p class="error">School Timetables A42 is the same day id as another in this timetable</p>
+
